Table rol
s {

  id_rol
 int [pk, increment]

  name varchar

}


Table departments {

  id_department int [pk, increment]

  name varchar

}


Table specializations {

  id_specialization int [pk, increment]

  name varchar

}


Table users {

  id_user int [pk, increment]

  first_name varchar

  last_name varchar

  phone varchar

  email varchar [unique]

  password varchar

  id_rol
 int [ref: > rol
s.id_rol
]

  id_department int [ref: > departments.id_department]

  id_specialization int [ref: > specializations.id_specialization]

}


Table work_teams {

  id_team int [pk, increment]

  name varchar

}


Table team_users {

  id_team int [ref: > work_teams.id_team]

  id_user int [ref: > users.id_user]

  indexes {

    (id_team, id_user) [pk]

  }

}


Table asset_inventory {

  id_asset int [pk, increment]

  name varchar

  description varchar

  type varchar

  status varchar

  acquisition_date date

  id_department int [ref: > departments.id_department]

}


Table ticket_statuses {

  id_status int [pk, increment]

  name varchar

}


Table priorities {

  id_priority int [pk, increment]

  name varchar

}


Table tickets {

  id_ticket int [pk, increment]

  title varchar

  description text

  id_creator_user int [ref: > users.id_user]

  id_assigned_user int [ref: > users.id_user]

  id_department int [ref: > departments.id_department]

  id_team int [ref: > work_teams.id_team]

  id_asset int [ref: > asset_inventory.id_asset]

  id_status int [ref: > ticket_statuses.id_status]

  id_priority int [ref: > priorities.id_priority]

  created_date datetime

  updated_date datetime

  closed_date datetime

}


Table support {

  id_support int [pk, increment]

  id_ticket int [ref: > tickets.id_ticket]

  id_user int [ref: > users.id_user]

  comment text

  date datetime

}